Add live demo section to index.html

--- a/index.html
+++ b/index.html
@@ -2030,6 +2030,35 @@
             </div>
         </div>
     </section>
+
+    <!-- Demos -->
+<section id="demos" class="section">
+    <div class="container">
+        <div class="section-header text-center">
+            <h2>Live Demos: Probieren Sie unsere CRMs</h2>
+            <p>Entdecken Sie unsere Live-Demo-Anwendungen und sehen Sie, wie maßgeschneiderte CRMs in Aktion funktionieren</p>
+        </div>
+        <div class="cases-grid">
+            <article class="case-card">
+                <h3 class="case-title">BrokerFlow CRM</h3>
+                <div class="case-result">Insurance & Finance</div>
+                <p class="case-desc">Eine vollständige CRM-Lösung für Versicherungsmakler und Finanzberater zur Verwaltung von Kunden, Policen und Verlängerungen.</p>
+                <a href="https://brokerflow-crm-tau.vercel.app/" target="_blank" style="display: inline-block; margin-top: 1rem; padding: 10px 20px; background: var(--primary); color: white; text-decoration: none; border-radius: 8px; font-weight: 600;">Demo ausprobieren →</a>
+            </article>
+            <article class="case-card">
+                <h3 class="case-title">Weitere Demos</h3>
+                <div class="case-result">Bald verfügbar</div>
+                <p class="case-desc">Wir erstellen weitere Demo-Anwendungen. Schauen Sie bald wieder vorbei!</p>
+            </article>
+            <article class="case-card">
+                <h3 class="case-title">Weitere Demos</h3>
+                <div class="case-result">Bald verfügbar</div>
+                <p class="case-desc">Wir erstellen weitere Demo-Anwendungen. Schauen Sie bald wieder vorbei!</p>
+            </article>
+        </div>
+    </div>
+</section>
+
     
     <!-- Cases -->
     <section id="cases" class="section" aria-labelledby="cases-title">
