Update company names and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="AGENT-BOT - Maßgeschneiderte CRM-Lösungen für Agenturen und Handwerksbetriebe. Custom CRM in 2 Wochen.">
+    <meta name="description" content="AGENT-BOT - Maßgeschneiderte CRM-Lösungen für Agenturen und Bauhandwerk Müller GmbHe. Custom CRM in 2 Wochen.">
     <meta name="canonical" href="https://agent-bot.de">
     <title>AGENT-BOT - Custom CRM Lösungen</title>
     
@@ -21,7 +21,7 @@
       "@context": "https://schema.org",
       "@type": "ProfessionalService",
       "name": "AGENT-BOT",
-      "description": "Maßgeschneiderte CRM-Lösungen für Agenturen und Handwerksbetriebe",
+      "description": "Maßgeschneiderte CRM-Lösungen für Agenturen und Bauhandwerk Müller GmbHe",
       "priceRange": "€1.500 - €5.000+",
       "serviceType": "Custom CRM Development",
       "areaServed": "DACH",
@@ -2042,7 +2042,7 @@
             <article class="case-card">
                 <h3 class="case-title">BrokerFlow CRM</h3>
                 <div class="case-result">Insurance & Finance</div>
-                <p class="case-desc">Eine vollständige CRM-Lösung für Versicherungsmakler und Finanzberater zur Verwaltung von Kunden, Policen und Verlängerungen.</p>
+                <p class="case-desc">Eine vollständige CRM-Lösung für Versicherungsmakler Schmitt & Partner und Finanzberater zur Verwaltung von Kunden, Policen und Verlängerungen.</p>
                 <a href="https://brokerflow-crm-tau.vercel.app/" target="_blank" style="display: inline-block; margin-top: 1rem; padding: 10px 20px; background: var(--primary); color: white; text-decoration: none; border-radius: 8px; font-weight: 600;">Demo ausprobieren →</a>
             </article>
             <article class="case-card">
@@ -2069,7 +2069,7 @@
             </div>
             <div class="cases-grid">
                 <article class="case-card">
-                    <h3 class="case-title" data-lang="case1-title">Versicherungsmakler</h3>
+                    <h3 class="case-title" data-lang="case1-title">Versicherungsmakler Schmitt & Partner</h3>
                     <div class="case-result" data-lang="case1-result">5h/Woche gespart</div>
                     <div class="case-roi" data-lang="case1-roi">ROI: 340%</div>
                     <p class="case-desc" data-lang="case1-desc">Automatisiertes Lead-Tracking mit Dokumentenmanagement.</p>
@@ -2080,7 +2080,7 @@
                     </div>
                 </article>
                 <article class="case-card">
-                    <h3 class="case-title" data-lang="case2-title">Digital Agentur</h3>
+                    <h3 class="case-title" data-lang="case2-title">Digitalagentur TechVision</h3>
                     <div class="case-result" data-lang="case2-result">80% weniger Reporting</div>
                     <div class="case-roi" data-lang="case2-roi">ROI: 520%</div>
                     <p class="case-desc" data-lang="case2-desc">Projekttracking und automatisierte Reports.</p>
@@ -2091,7 +2091,7 @@
                     </div>
                 </article>
                 <article class="case-card">
-                    <h3 class="case-title" data-lang="case3-title">Handwerksbetrieb</h3>
+                    <h3 class="case-title" data-lang="case3-title">Bauhandwerk Müller GmbH</h3>
                     <div class="case-result" data-lang="case3-result">3x Projektkapazität</div>
                     <div class="case-roi" data-lang="case3-roi">ROI: 280%</div>
                     <p class="case-desc" data-lang="case3-desc">Mobile CRM für Baustellenkoordination.</p>
@@ -2409,9 +2409,9 @@
                 'problem-title': 'Das Problem', 'problem-1': '', 'problem-2': '', 'problem-3': 'Spreadsheets skalieren nicht', 'problem-4': 'Keine Kontrolle über deine Daten',
                 'solution-title': 'Die Lösung', 'solution-1': '', 'solution-2': '', 'solution-3': 'Vollständige Skalierbarkeit', 'solution-4': '100% Datenhoheit',
                 'cases-title': 'Erfolgsgeschichten', 'cases-subtitle': 'Dokumentierte Ergebnisse',
-                'case1-title': 'Versicherungsmakler', 'case1-result': '', 'case1-roi': 'ROI: 340%', 'case1-desc': 'Automatisiertes Lead-Tracking.',
-                'case2-title': 'Digital Agentur', 'case2-result': '', 'case2-roi': 'ROI: 520%', 'case2-desc': 'Projekttracking und Reports.',
-                'case3-title': 'Handwerksbetrieb', 'case3-result': '', 'case3-roi': 'ROI: 280%', 'case3-desc': 'Mobile CRM.',
+                'case1-title': 'Versicherungsmakler Schmitt & Partner', 'case1-result': '', 'case1-roi': 'ROI: 340%', 'case1-desc': 'Automatisiertes Lead-Tracking.',
+                'case2-title': 'Digitalagentur TechVision', 'case2-result': '', 'case2-roi': 'ROI: 520%', 'case2-desc': 'Projekttracking und Reports.',
+                'case3-title': 'Bauhandwerk Müller GmbH', 'case3-result': '', 'case3-roi': 'ROI: 280%', 'case3-desc': 'Mobile CRM.',
                 'pricing-title': 'Transparente Preise', 'pricing-subtitle': 'Wähle das passende Paket',
                 'pricing-monthly': 'Monatlich', 'pricing-yearly': 'Jährlich', 'pricing-savings': '-20%',
                 'pricing-basic-name': 'Basic CRM', 'pricing-basic-1': 'Kontaktverwaltung', 'pricing-basic-2': 'Pipeline-Ansicht', 'pricing-basic-3': 'E-Mail Integration', 'pricing-basic-4': 'Basis-Reports', 'pricing-basic-5': '2 Wochen Support', 'pricing-basic-cta': 'Anfragen',
