Hide case video section in index.html

--- a/index.html
+++ b/index.html
@@ -887,6 +887,7 @@
         
         /* VIDEO CASE STUDY */
         .case-video {
+                    display: none;
             margin-top: var(--spacing-md);
             border-radius: var(--radius-sm);
             overflow: hidden;
