Enhance case studies with detailed descriptions
Added case details sections with challenges, solutions, and quotes for multiple case studies.

--- a/index.html
+++ b/index.html
@@ -884,6 +884,38 @@
             font-size: 0.875rem;
             color: var(--color-text-secondary);
         }
+
+                /* CASE DETAILS */
+        .case-details {
+            margin-top: var(--spacing-md);
+            padding-top: var(--spacing-md);
+            border-top: 1px solid var(--color-border);
+        }
+
+        .case-details h4 {
+            font-size: 0.875rem;
+            color: var(--color-accent-primary-bright);
+            margin-top: var(--spacing-md);
+            margin-bottom: var(--spacing-sm);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-weight: 600;
+        }
+
+        .case-details p {
+            font-size: 0.875rem;
+            color: var(--color-text-secondary);
+            line-height: 1.5;
+        }
+
+        .case-details blockquote {
+            margin: var(--spacing-md) 0;
+            padding-left: var(--spacing-md);
+            border-left: 3px solid var(--color-accent-primary-bright);
+            font-style: italic;
+            color: var(--color-text-muted);
+            font-size: 0.875rem;
+        }
         
         /* VIDEO CASE STUDY */
         .case-video {
@@ -2074,6 +2106,14 @@
                     <div class="case-result" data-lang="case1-result">5h/Woche gespart</div>
                     <div class="case-roi" data-lang="case1-roi">ROI: 340%</div>
                     <p class="case-desc" data-lang="case1-desc">Automatisiertes Lead-Tracking mit Dokumentenmanagement.</p>
+                                        <div class="case-details">
+                        <h4>Herausforderung</h4>
+                        <p>Manuelle Verwaltung von über 500 Policen, verlorene Verlängerungstermine, unorganisierte Kundendokumente.</p>
+                        <h4>Lösung</h4>
+                        <p>Automatisches Ablaufdatum-Tracking, zentrales Dokumenten-Repository, integrierte E-Mail-Erinnerungen.</p>
+                        <h4>Zitat</h4>
+                        <blockquote>"Das System hat uns geholfen, keine Verlängerung mehr zu verpassen. Unsere Kunden sind zufriedener denn je." - Michael Schmitt, Geschäftsführer</blockquote>
+                    </div>
                     <div class="case-video" onclick="alert('Video Modal: Customer Testimonial')">
                         <div class="case-video-placeholder">
                             <div class="case-video-icon">▶</div>
@@ -2085,6 +2125,14 @@
                     <div class="case-result" data-lang="case2-result">80% weniger Reporting</div>
                     <div class="case-roi" data-lang="case2-roi">ROI: 520%</div>
                     <p class="case-desc" data-lang="case2-desc">Projekttracking und automatisierte Reports.</p>
+                                        <div class="case-details">
+                        <h4>Herausforderung</h4>
+                        <p>15-20 Stunden wöchentlich für manuelles Reporting, inkonsistente Projektdaten, keine Echtzeit-Übersicht.</p>
+                        <h4>Lösung</h4>
+                        <p>Automatische Report-Generierung, Echtzeit-Dashboard, Projektfortschritt-Tracking.</p>
+                        <h4>Zitat</h4>
+                        <blockquote>"Wir haben jetzt mehr Zeit für strategische Aufgaben statt manuelles Datensammeln." - Sarah Weber, Operations Manager</blockquote>
+                    </div>
                     <div class="case-video" onclick="alert('Video Modal: Case Study Walkthrough')">
                         <div class="case-video-placeholder">
                             <div class="case-video-icon">▶</div>
@@ -2096,6 +2144,14 @@
                     <div class="case-result" data-lang="case3-result">3x Projektkapazität</div>
                     <div class="case-roi" data-lang="case3-roi">ROI: 280%</div>
                     <p class="case-desc" data-lang="case3-desc">Mobile CRM für Baustellenkoordination.</p>
+                                        <div class="case-details">
+                        <h4>Herausforderung</h4>
+                        <p>Begrenzt auf 3 gleichzeitige Projekte, häufige Terminverschiebungen, Papier-basierte Prozesse.</p>
+                        <h4>Lösung</h4>
+                        <p>Mobile-first CRM, Echtzeit-Baustellenberichte, automatische Terminkoordination.</p>
+                        <h4>Zitat</h4>
+                        <blockquote>"Die mobile Lösung hat unsere Effizienz revolutioniert. Wir können jetzt dreimal so viele Projekte bewältigen." - Thomas Müller, Inhaber</blockquote>
+                    </div>
                     <div class="case-video" onclick="alert('Video Modal: Before/After Comparison')">
                         <div class="case-video-placeholder">
                             <div class="case-video-icon">▶</div>
