--- a/index.html
+++ b/index.html
@@ -2079,13 +2079,13 @@
                 <a href="https://brokerflow-crm-tau.vercel.app/" target="_blank" style="display: inline-block; margin-top: 1rem; padding: 10px 20px; background: var(--primary); color: white; text-decoration: none; border-radius: 8px; font-weight: 600;">Demo ausprobieren →</a>
             </article>
             <article class="case-card">
-                <h3 class="case-title">Weitere Demos</h3>
-                <div class="case-result">Bald verfügbar</div>
+                <h3 class="case-title">AgencyMetrics CRM</h3>
+                <div class="case-result">Digital Marketing & Analytics</div>
                 <p class="case-desc">Wir erstellen weitere Demo-Anwendungen. Schauen Sie bald wieder vorbei!</p>
             </article>
             <article class="case-card">
-                <h3 class="case-title">Weitere Demos</h3>
-                <div class="case-result">Bald verfügbar</div>
+                <h3 class="case-title">HelpDesk Pro</h3>
+                <div class="case-result">Construction & Field Service</div>
                 <p class="case-desc">Wir erstellen weitere Demo-Anwendungen. Schauen Sie bald wieder vorbei!</p>
             </article>
         </div>
