--- a/index.html
+++ b/index.html
@@ -2081,12 +2081,12 @@
             <article class="case-card">
                 <h3 class="case-title">AgencyMetrics CRM</h3>
                 <div class="case-result">Digital Marketing & Analytics</div>
-                <p class="case-desc">Wir erstellen weitere Demo-Anwendungen. Schauen Sie bald wieder vorbei!</p>
+                <p class="case-desc">Umfassendes Analytics-Dashboard für Digitalagenturen zur Kampagnen-Überwachung über Google Ads, Facebook Ads und GA4.. Schauen Sie bald wieder vorbei!</p>
             </article>
             <article class="case-card">
                 <h3 class="case-title">HelpDesk Pro</h3>
                 <div class="case-result">Construction & Field Service</div>
-                <p class="case-desc">Wir erstellen weitere Demo-Anwendungen. Schauen Sie bald wieder vorbei!</p>
+                <p class="case-desc">Professionelles Ticket-Management-System für Bauunternehmen mit mobiler Einsatzplanung und Kundenportal.. Schauen Sie bald wieder vorbei!</p>
             </article>
         </div>
     </div>
