Add demo link to AgencyMetrics CRM section
Added a demo link for AgencyMetrics CRM.

--- a/index.html
+++ b/index.html
@@ -2082,6 +2082,7 @@
                 <h3 class="case-title">AgencyMetrics CRM</h3>
                 <div class="case-result">Digital Marketing & Analytics</div>
                 <p class="case-desc">Umfassendes Analytics-Dashboard für Digitalagenturen zur Kampagnen-Überwachung über Google Ads, Facebook Ads und GA4.. Schauen Sie bald wieder vorbei!</p>
+                                    <a href="https://agency-dashboard-ashy.vercel.app/" target="_blank" style="display: inline-block; margin-top: 1rem; padding: 10px 20px; background: var(--primary); color: white; text-decoration: none; border-radius: 8px; font-weight: 600;">Demo ausprobieren →</a>
             </article>
             <article class="case-card">
                 <h3 class="case-title">HelpDesk Pro</h3>
