--- a/index.html
+++ b/index.html
@@ -2085,9 +2085,9 @@
                                     <a href="https://agency-dashboard-ashy.vercel.app/" target="_blank" style="display: inline-block; margin-top: 1rem; padding: 10px 20px; background: var(--primary); color: white; text-decoration: none; border-radius: 8px; font-weight: 600;">Demo ausprobieren →</a>
             </article>
             <article class="case-card">
-                <h3 class="case-title">HelpDesk Pro</h3>
+                <h3 class="case-title">CRAFTFLOW CRM</h3>
                 <div class="case-result">Construction & Field Service</div>
-                <p class="case-desc">Professionelles Ticket-Management-System für Bauunternehmen mit mobiler Einsatzplanung und Kundenportal.. Schauen Sie bald wieder vorbei!</p>
+                <p class="case-desc">Branchenlösung für Handwerk und Logistik mit umschaltbaren Ansichten für Projekte, Touren und Fuhrpark-Management.-System für Bauunternehmen mit mobiler Einsatzplanung und Kundenportal.. Schauen Sie bald wieder vorbei!</p>
             </article>
         </div>
     </div>
