--- a/index.html
+++ b/index.html
@@ -2086,8 +2086,8 @@
             </article>
             <article class="case-card">
                 <h3 class="case-title">CRAFTFLOW CRM</h3>
-                <div class="case-result">Construction & Field Service</div>
-                <p class="case-desc">Branchenlösung für Handwerk und Logistik mit umschaltbaren Ansichten für Projekte, Touren und Fuhrpark-Management.-System für Bauunternehmen mit mobiler Einsatzplanung und Kundenportal</p>
+                            <div class="case-result">Handwerk & Logistik</div>                <p class="case-desc">Branchenlösung für Handwerk und Logistik mit umschaltbaren Ansichten für Projekte, Touren und Fuhrpark-Management.-System für Bauunternehmen mit mobiler Einsatzplanung und Kundenportal</p>
+                                            <a href="/crm-demo-stable.html" target="_blank" style="display: inline-block; margin-top: 1rem; padding: 10px 20px; background: linear-gradient(135deg, #1e3a5f 0%, #f59e0b 100%); color: white; text-decoration: none; border-radius: 5px; font-weight: 500;">Demo ausprobieren →</a>
             </article>
         </div>
     </div>
