--- a/index.html
+++ b/index.html
@@ -2422,14 +2422,17 @@
     </div>
     
     <!-- Footer -->
-    <footer class="footer" role="contentinfo">
-        <div class="container">
-            <div class="footer-content">
-                <p class="footer-copyright">© 2024 AGENT-BOT. Alle Rechte vorbehalten.</p>
-                <p class="footer-tech">Built with <span>modern tech</span></p>
-            </div>
+    <footer class="footer">
+    <div class="footer-content">
+        <div class="footer-links">
+            <a href="impressum.html">Impressum</a>
+            <a href="datenschutz.html">Datenschutz</a>
+            <a href="agb.html">AGB</a>
+            <a href="widerrufsbelehrung.html">Widerruf</a>
         </div>
-    </footer>
+        <p class="copyright">&copy; 2026 AGENT-BOT / CRM.BUILD. Alle Rechte vorbehalten.</p>
+    </div>
+</footer>
     
     <script>
         // STATE
