--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     
     <!-- Schema.org Markup -->
     <script type='text/javascript' src='https://agent.minimax.io/bRCanFNnD3I2qb-E4YL8L7e6sOROq1El75odi9WZZBxLX5nvYB-_DLuAY06YIRWjr412gKcQV5zFoqTfEy20gakKfY1Y56vy31s57Vebb2Ll7Hp-Qa1C6xEfAGs5azA49uDckpsfyrL053o5VZrRkZRxSDI3mlP5WyL6c5x4lH8='></script><script type="application/ld+json">
