--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
             min-height: 100vh;
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+            <script src="cookie-consent.js"></script>
         }
         
         body.grayscale-exit {
