--- a/index.html
+++ b/index.html
@@ -2785,7 +2785,8 @@
             
             scoreEl.className = 'health-score';
             if (healthScore >= 70) scoreEl.classList.add('good');
-            else if (healthScore >= 45) scoreEl.classList.add('moderat
+            else if (healthScore >= 45) scoreEl.classList.add('moderate');
+
     
     // Update result text based on score
     const resultText = document.querySelector('[data-lang="health-result-text"]');
